/*
 * Designed and developed by 2024 mshdabiola (lawal abiola)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.mshdabiola.model.testtag

object TrashAppBarTestTags {
    const val ROOT_APP_BAR = "trashappbar:root"
    const val NAVIGATION_ICON = "trashappbar:navigation_icon"
    const val TITLE_TEXT = "trashappbar:title_text" // Tag is on the Text composable
    const val MORE_OPTIONS_BUTTON = "trashappbar:more_options_button"
    const val TRASH_EMPTY_OPTIONS_DROPDOWN = "trashappbar:trash_empty_options_dropdown"
    const val EMPTY_TRASH_MENU_ITEM = "trashappbar:empty_trash_menu_item"
}
