<?xml version="1.0" encoding="utf-8"?>
<!--
     Designed and developed by 2024 mshdabiola (lawal abiola)

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="rail_state_expanded">Expanded</string>
    <string name="rail_state_collapsed">Collapsed</string>
    <string name="rail_action_collapse">Collapse rail</string>
    <string name="rail_action_expand">Expand rail</string>
    <string name="brand_content_description">Brand</string>
    <string name="add_content_description">Add</string>
    <string name="fab_add_note_text">Add Note</string>

    <string name="modules_designsystem_create_new_label">Create new label</string>
    <string name="modules_designsystem_labels">Labels</string>
    <string name="modules_designsystem_edit">Edit</string>

    <string-array name="route">
        <item>Notes</item>
        <item>Reminders</item>
        <item>Archive</item>
        <item>Trash</item>
        <item>Settings</item>
    </string-array>
</resources>
